# models/misc_expense_model.py
@@ -1,0 +1,17 @@
+from sqlalchemy import Column, String, DateTime, Float
+from sqlalchemy.dialects.postgresql import UUID
+from sqlalchemy.ext.declarative import declarative_base
+import uuid
+import datetime
+
+Base = declarative_base()
+
+class MiscExpenseModel(Base):
+    __tablename__ = "misc_expenses"
+
+    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
+    description = Column(String, nullable=False)
+    expense_date = Column(DateTime, default=datetime.datetime.utcnow)
+    value = Column(Float, nullable=False)
+    created_at = Column(DateTime, default=datetime.datetime.utcnow)
+    updated_at = Column(DateTime, default=datetime.datetime.utcnow, onupdate=datetime.datetime.utcnow)
